--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
   background-color: #f0f8ff;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .link-underline {
   border-bottom-width: 0;
   background-image: linear-gradient(transparent, transparent),
@@ -65,4 +69,23 @@ body {
 
 .custom-shape-divider-bottom-1696657268 .shape-fill {
   fill: #f0f8ff;
+}
+
+.float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 40px;
+  right: 40px;
+  background-color: #25d366;
+  color: #fff;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 100;
+}
+
+.my-float {
+  margin-top: 16px;
 }
