--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 body {
   background-color: #f0f8ff;
+  overflow-x: hidden;
 }
 
 /*Navbar*/
@@ -116,6 +117,73 @@ body {
 }
 
 /*Transitions*/
+._container {
+  width: 1160px;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  border-left: 1px solid lightgrey;
+  border-right: 1px solid lightgrey;
+  z-index: -1;
+}
+
+._slider {
+  padding-bottom: 80px;
+  width: 1200px;
+  margin-left: -100px;
+}
+
+.service {
+  height: auto;
+  background-color: white;
+  margin: 0 20px;
+  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  float: left;
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  transform: scale(1);
+  transition: all 0.5s ease-in-out;
+}
+
+.service:hover {
+  -webkit-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  transform: scale(1.05);
+  transition: all 0.5s ease-in-out;
+  box-shadow: 0 3px 32px 0 rgba(0, 0, 0, 0.15);
+}
+
+.slick-arrow {
+  display: none !important;
+}
+
+.pod1 {
+  background-image: url(https://images.unsplash.com/photo-1497366811353-6870744d04b2?auto=format&fit=crop&q=80&w=1738&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+.pod2 {
+  background-image: url(https://images.unsplash.com/photo-1497366811353-6870744d04b2?auto=format&fit=crop&q=80&w=1738&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+.pod3 {
+  background-image: url(https://images.unsplash.com/photo-1497366811353-6870744d04b2?auto=format&fit=crop&q=80&w=1738&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+.pod4 {
+  background-image: url(https://images.unsplash.com/photo-1497366811353-6870744d04b2?auto=format&fit=crop&q=80&w=1738&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+.pod5 {
+  background-image: url(https://images.unsplash.com/photo-1497366811353-6870744d04b2?auto=format&fit=crop&q=80&w=1738&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+.slider a {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
 ._service {
   filter: none;
   cursor: pointer;
